Popravek: dodani novi URL-ji, templates in static datoteke

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python
 *.pyc
 *~
-__pycache__
+__pycache__/
 
 # Env
 .env
@@ -11,8 +11,11 @@ venv/
 # Database
 db.sqlite3
 
-# Static folder at project root
-/static/
+# Static files (collectstatic target)
+static_root/
+
+# Media files (user uploads)
+media/
 
 # macOS
 ._*
@@ -26,7 +29,7 @@ ehthumbs*.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
 
-# Visual Studio
+# IDEs and editors
 .vscode/
 .history/
 *.code-workspace
